--- a/ferrerih_qfg_stylesheet.css
+++ b/ferrerih_qfg_stylesheet.css
@@ -118,6 +118,7 @@ body:before {
 	bottom: -50px;
 	left: 42%;
 	width: 73%;
+	z-index: 0 !important;
 }
 .carousel-indicators li {
 	border-color: #b30000 !important; 
@@ -741,6 +742,7 @@ button, .btn {
 }
 .carousel-indicators {
 	bottom: 0px;
+	z-index: 1 !important;
 }
 .center {
 	width: 55%; 
@@ -877,6 +879,7 @@ ul.affix {
 }
 .carousel-indicators {
 	bottom: 0px;
+	z-index: 1 !important;
 }
 .center {
 	width: 50%; 
